# MGEALite

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakeSettings.json  EASetup.json  README.md  mgealite_version.cpp.in  mgealite_version.h
examples/: CMakeLists.txt
examples/bar_handstand/: 00_barHandstand.cpp  00_barHandstand.json  CMakeLists.txt
examples/handstand/: 00_handstand.cpp  00_handstand.deva  00_handstand.json  00_standstill.cpp  00_standstill.json  01_handstand.cpp  01_handstand.json  01_standstill.cpp  01_standstill.json  02_handstand.cpp  02_handstand.deva  02_handstand.json  02_standstill.cpp  02_standstill.json  03_handstand.cpp  03_handstand.deva  03_handstand.json  03_standstill.cpp  03_standstill.json  04_standstill.cpp  04_standstill.json  CMakeLists.txt
include/: Common.h  Database.h  Datastore.h  MGEA.h  MGEAError.h  Metric.h  SharedSynchronisation.h  SimulationData.h  SimulationInfo.h  SimulationLog.h
include/GUI/: GUI.h  GUIFrameCounter.h  GUILogger.h  GUIState.h  GUIStateDrawer.h  ImGuiExtensions.h  ImPlotExtensions.h  ImPlotRewrites.h  Initialisation.h  PlotData.h
include/GUI/GUIData/: DistanceData.h  FitnessData.h  ProgressbarData.h  SliderData.h  VariationData.h
include/JSON/: ClampedSpline.h  ContactParameters.h  MotionParameters.h  SimulationDataPtr.h  SplineControlPoint.h
include/Logging/: CustomFormatting.h  SpdlogCommon.h
include/Math/: ClampedSpline.h
include/MotionGeneration/: ContactParameters.h  MotionGenerationState.h  MotionGenerator.h  MotionParameters.h  SharedSynchronisationHelpers.h  Specification.h
include/MotionGeneration/Initialisers/: Initialisers.h
include/MotionGeneration/Metrics/: Metrics.h
include/MotionGeneration/ParentSelectors/: ParentSelectors.h
include/MotionGeneration/SurvivorSelectors/: SurvivorSelectors.h
include/MotionGeneration/Variations/: CrossoverAll.h  CrossoverSingle.h  CutAndCrossfillAll.h  CutAndCrossfillSingle.h  DeletionAll.h  DeletionSingle.h  InsertionAll.h  InsertionSingle.h  SNV.h  UniformCrossoverAll.h  UniformCrossoverSingle.h  Variations.h  WaveletSNV.h  kPointCrossoverAll.h  kPointCrossoverSingle.h
include/Wavelet/: HaarWavelet.h  wavelet.hpp
src/: Common.cpp  Database.cpp  Datastore.cpp  MGEALite.cpp  Metric.cpp  SharedSynchronisation.cpp  SimulationData.cpp  SimulationLog.cpp
src/GUI/: GUIState.cpp  GUIStateDrawer.cpp  ImGuiExtensions.cpp  ImPlotExtensions.cpp  ImPlotRewrites.cpp  Initialisation.cpp  PlotData.cpp
src/JSON/: SimulationDataPtr.cpp
src/Logging/: SpdlogCommon.cpp
src/Math/: ClampedSpline.cpp
src/MotionGeneration/: ContactParameters.cpp  MotionGenerationState.cpp  MotionGenerator.cpp  MotionGenerator_EAFunctions.cpp  MotionGenerator_MetricFunctors.cpp  MotionParameters.cpp
src/MotionGeneration/Initialisers/: Boundary.cpp  BoundaryWavelet.cpp  ImportFromFolder.cpp  Random.cpp  Zero.cpp
src/MotionGeneration/Metrics/: AngleDifferenceSum.cpp  AngleDifferenceSumLinearWeighted.cpp  AngularVelocitySign.cpp  AverageOfAngleDifferenceSumsStepped.cpp  MaximumAngleDifferenceStepped.cpp  Metrics.cpp  OrderedVectorConversion.cpp  OutputBetweenTwoValues.cpp  maximumAngleDifference.cpp
src/MotionGeneration/ParentSelectors/: MetricProportional.cpp
src/MotionGeneration/SurvivorSelectors/: ClusterOverMetric.cpp  CullEquals.cpp  CullPartiallyDominated.cpp  OnlyPositivesIfThereIsAny.cpp  ParetoFront.cpp  SurvivorSelectionOverMetric.cpp
src/MotionGeneration/Variations/: CrossoverAll.cpp  CrossoverSingle.cpp  CutAndCrossfillAll.cpp  CutAndCrossfillSingle.cpp  DeletionAll.cpp  DeletionLInt.cpp  DeletionSingle.cpp  DirectionalLInt.cpp  HalfSineAsynchronous.cpp  HalfSineSingle.cpp  HalfSineSynchronous.cpp  InsertionAll.cpp  InsertionSingle.cpp  SNV.cpp  SNVLInt.cpp  UniformCrossoverAll.cpp  UniformCrossoverSingle.cpp  Variations.cpp  WaveletSNV.cpp  kPointCrossoverAll.cpp  kPointCrossoverSingle.cpp
src/Wavelet/: HaarWavelet.cpp  wavelet.cpp
tests/: CMakeLists.txt  MGEALite_AngularVelocitySign.cpp  MGEALite_JSONFiles.cpp
tests/testdata/: Regular.input  Regular.json  Regular.output  SingleTimestep.output
